tests/tooling/fixtures/native/recovery/negative/negative_foundation_alias_parser_missing_param_colon.objc3
// Expected diagnostic code(s): O3P107, O3P100.
module NegativeFoundationAliasParserMissingParamColon;

fn pick(flag BOOL, value: NSInteger) -> NSUInteger {
  return value;
}

fn main() -> i32 {
  return pick(true, 7);
}
